--- a/BLog.html
+++ b/BLog.html
@@ -15,7 +15,7 @@
       href="jello1%20(1).png"
       media="(prefers-color-scheme: dark)"
     />
-    <title>Sri Lanka Explore - Home</title>
+    <title>Sri Lanka Explore - Blog</title>
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -29,7 +29,7 @@
       <a href="#"><img src="jello2.png" alt="logo" class="logo" /></a>
       <div>
         <ul id="navbar">
-          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="Articles.html">Articles</a></li>
           <li><a href="About.html">About</a></li>
           <li><a href="BLog.html" class="active">BLog</a></li>
