--- a/About.html
+++ b/About.html
@@ -29,7 +29,7 @@
       <a href="#"><img src="jello2.png" alt="logo" class="logo" /></a>
       <div>
         <ul id="navbar">
-          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="Articles.html">Articles</a></li>
           <li><a href="About.html" class="active">About</a></li>
           <li><a href="BLog.html">BLog</a></li>
